<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:clickable="false"
        android:focusable="auto"
        android:background="#1B5E20">
    <EditText
            android:text="@string/current_bpm"
            android:layout_width="214dp"
            android:layout_height="107dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/currentBPM"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="64sp"
            android:textAlignment="center"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@id/increaseBPM"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorAccent"
            android:cursorVisible="false"
            android:imeOptions="actionDone" android:hint="@string/beats_per_minute"/>
    <Button
            android:text="@string/increase_bpm"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:id="@+id/increaseBPM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/decreaseBPM"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/currentBPM"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBaseline_toBaselineOf="@id/decreaseBPM"
            android:background="@drawable/btn_dark_background"
            android:textColor="@color/primaryTextColor"/>
    <Button
            android:text="@string/decrease_bpm"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:id="@+id/decreaseBPM"
            app:layout_constraintStart_toEndOf="@+id/increaseBPM"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentBPM"
            app:layout_constraintBottom_toTopOf="@id/metronomeToggle"
            android:background="@drawable/btn_dark_background"
            android:textColor="@color/primaryTextColor"/>
    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottomGuideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="50dp"/>
    <ToggleButton
            android:text="@string/metronome_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/metronomeToggle"
            app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
            app:layout_constraintTop_toBottomOf="@+id/decreaseBPM"
            android:textColor="@color/primaryTextColor"
            android:background="@drawable/btn_toggled_off_background"
            android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>