<resources>
    <string name="app_name">Metronome</string>
    <string name="current_bpm">60</string>
    <string name="increase_bpm">Increase</string>
    <string name="decrease_bpm">Decrease</string>
    <string name="metronome_toggle">Metronome Toggle</string>
    <string name="beats_per_minute">BPM</string>
</resources>
